--- a/spring-students/build.gradle
+++ b/spring-students/build.gradle
@@ -5,10 +5,10 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.3'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = 17
 }
 
 configurations {
@@ -27,8 +27,6 @@ ext {
 
 dependencies {
     implementation 'org.springframework.shell:spring-shell-starter'
-    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
