--- a/spring-students/src/main/resources/application.yml
+++ b/spring-students/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: ${SOCKET_SERVER_PORT:8888}
+
 logging:
   level:
     ROOT: INFO
@@ -8,3 +11,5 @@ app:
 spring:
   profiles:
     active: ${PROFILE:init}
+  main:
+    web-application-type: none
