--- a/spring-data-contacts/docker/docker-compose.yml
+++ b/spring-data-contacts/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=contacts
+      - POSTGRES_DB=contacts_db
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
