--- a/spring-data-contacts/src/main/resources/application.yml
+++ b/spring-data-contacts/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5434/contacts
+    url: jdbc:postgresql://localhost:5434/contacts_db
     username: postgres
     password: postgres
     hikari:
